# Astra-Trainer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: sanitize.sh
src/: main.cu  misc.h
src/data/: array.h  dense_matrix.h  include.h  layer_tensor.h  matrix.h  tensor.h
src/dataloader/: binpack.h  dataloader.h  rng.h  training_data_stream.h
src/kernel/: activation.h  include.h  kernel.h  util.h
src/kernel/activation/: activation.h  activation_bwd.cu  activation_fwd.cu
src/kernel/affine/: affine.cu  affine.h  affine_bwd.cu  affine_fwd.cu
src/kernel/bucketed_affine/: bucketed_affine.cu  bucketed_affine.h
src/kernel/concat/: concat.h  concat_bwd.cu  concat_fwd.cu
src/kernel/cublas/: cublas.cu  cublas.h
src/kernel/elemwise/: elemwise.cu  elemwise.h
src/kernel/elemwise/binary/: binary.cu  binary.h
src/kernel/elemwise/unary/: unary.cu  unary.h
src/kernel/factorizer/: factorizer.h  factorizer_bwd.cu  factorizer_fwd.cu
src/kernel/feature_transformer/: feature_transformer.h  feature_transformer_bwd.cu  feature_transformer_fwd.cu
src/kernel/loss/: loss.cu  loss.h  mpe.cu  mse.cu
src/kernel/optimizer/: adam.cu  optimizer.cu  optimizer.h  radam.cu  ranger.cu
src/kernel/pairwise_mul/: pairwise_mul.cu  pairwise_mul.h  pairwise_mul_bwd.cu  pairwise_mul_fwd.cu
src/kernel/select/: select.cu  select.h  select_bwd.cu  select_fwd.cu
src/kernel/sparse_affine/: sparse_affine.cu  sparse_affine.h  sparse_affine_bwd.cu  sparse_affine_fwd.cu  sparse_affine_pairwise_mul_bwd.cu  sparse_affine_pairwise_mul_fwd.cu
src/kernel/sparse_affine_pairwise_mul/: sparse_affine_pairwise_mul.h  sparse_affine_pairwise_mul_bwd.cu  sparse_affine_pairwise_mul_fwd.cu
src/lib/: dataloader.h  training_data_stream.h
src/model/: builder.h  common.h  include.h  model.cu  model.h
src/models/: astra.h  model.cu  model.h  test.h
src/nn/: data.h  hyperparams.h  include.h  loss.h  lr_scheduler.h  lrscheduler.h  network.cu  network.h  optimizer.h  types.h  util.h
src/nn/batch_data/: batch_data.cpp  batch_data.h
src/nn/data/: array.h  dense_matrix.h  include.h  sparse_batch.h  tensor.h
src/nn/dataloader/: dataloader.h  utils.h
src/nn/graph/: common.h  graph.cu  graph.h  node.h
src/nn/layer/: activation.h  affine.h  concat.h  feature_transformer.h  include.h  input.h  layer.h  pairwise_mul.h  select.h
src/nn/layers/: affine.h  bucketed.h  concat.h  feature_transformer.h  fully_connected.h  include.h  layer.h  output_buckets.h  select.h
src/nn/loss/: include.h  loss.h  mpe.h  mse.h
src/nn/lr_scheduler/: constant.h  cosine_annealing.h  gradual_decay.h  include.h  lr_scheduler.h  step_decay.h
src/nn/network/: network.cu  network.h
src/nn/ops/: activate.h  affine.h  binary.h  concat.h  elemwise.h  feature_transformer.h  include.h  input.h  ops.h  pairwise_mul.h  select.h  sparse_affine.h  unary.h
src/nn/optimizer/: adam.h  include.h  lr_scheduler.h  optimizer.h  radam.h  ranger.h
src/nn/param/: factorizer.h  param.h  save_format.h
src/nn/params/: params.h
src/nn/trainer/: trainer.cu  trainer.h
src/nn/utils/: utils.cpp  utils.h
src/nn/wdl_scheduler/: constant.h  include.h  linear.h  wdl_scheduler.h
src/trainer/: builder.h  common.h  include.h  model.h  trainer.cu  trainer.h
src/training_data_format/: include.h
src/training_data_formats/: include.h
src/training_data_formats/sf_binpack/: rng.h  sf_binpack.h
